Closed Bug 1315551 Opened 8 years ago Closed 8 years ago

"tab-sound-icon" is not shown in tab

Categories

(Core :: Audio/Video: Playback, defect)

52 Branch
x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla52
Tracking Status
firefox49 --- unaffected
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 + verified

People

(Reporter: alice0775, Assigned: alwu)

References

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

[Tracking Requested - why for this release]:

Build Identifier:
https://hg.mozilla.org/mozilla-central/rev/c44c01dfd264370c1558b747525d220a9a89b51c
Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0 ID:20161106030203


Reproducible: 100%

Steps To Reproduce:
1. Open https://videos.cdn.mozilla.net/uploads/mozillaorg/
2. Click any video link


Actual Results:
"tab-sound-icon" is not shown in tab

Expected Results:
"tab-sound-icon" should be shown in tab



Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c22b06e7fba4a0c6bf4c1fdf451ebf52633b6767&tochange=10d414508e1798890cbe04007a726c80a6dc7514

Regressed by: Bug 1302350
Flags: needinfo?(alwu)
Assignee: nobody → alwu
Flags: needinfo?(alwu)
OS: Windows 10 → All
Tracking 52+ for this visual regression.
Attachment #8808075 - Attachment is obsolete: true
Comment on attachment 8808074 [details]
Bug 1315551 - part2 : check we have initialized agent when we want to call the agent's function.

https://reviewboard.mozilla.org/r/90998/#review91096
Attachment #8808074 - Flags: review?(jwwang) → review+
Comment on attachment 8808073 [details]
Bug 1315551 - part1 : should pass valid window for agent's initialization.

https://reviewboard.mozilla.org/r/90996/#review91152

This is ok if we don't have telephony API. I remember that telephony API doesn't set a window.
Attachment #8808073 - Flags: review?(amarchesini) → review+
(In reply to Andrea Marchesini [:baku] from comment #10)
> Comment on attachment 8808073 [details]
> Bug 1315551 - part1 : should pass valid window for agent's initialization.
> 
> https://reviewboard.mozilla.org/r/90996/#review91152
> 
> This is ok if we don't have telephony API. I remember that telephony API
> doesn't set a window.

Yes, telephony API is b2g-only and it has been removed from m-c.
Pushed by alwu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/967dd79df01c
part1 : should pass valid window for agent's initialization. r=baku
https://hg.mozilla.org/integration/autoland/rev/dd2c93bc1da3
part2 : check we have initialized agent when we want to call the agent's function. r=jwwang
Flags: qe-verify+
I reproduced this issue using Fx 52.0a1, build ID: 20161106030203, on Windows 10 x64.
I can confirm this issue is fixes, I verified using Fx 52.0b4, build ID: 20170206101855, on Windows 10 x64, Mac OS X 10.11 and Ubuntu 14.04 LTS.

Cheers!
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: