Bug 1315551 - part2 : check we have initialized agent when we want to call the agent's function. r=jwwang

Because the agent's initialization might fail if we don't get the valid inner window, we need to
check whether the agent exists before calling the agent's method.

MozReview-Commit-ID: IUuvyGh7CMd